# MSU-NAIR-2024S

./: .gitignore  CMakeLists.txt  README.md
task1/: CMakeLists.txt  README.md  main.cpp
task1/tracer/: tracer.cpp  tracer.hpp
task3/: CMakeLists.txt  README.md  main.cpp  main_test.cpp
task3/cmake/: list_dirs.cmake  upd_tar_list.cmake
task3/tracer/: siren.hpp  tracer.cpp  tracer.hpp
